<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <EditText
        android:id="@+id/magnetometerZplainText"
        android:layout_width="150sp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/magnetometerZ"
        android:inputType="textPersonName"
        android:text="@string/magnetometerZ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/magnetometerYplainText" />

    <EditText
        android:id="@+id/orientationZPlainText"
        android:layout_width="150sp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/orientationZ"
        android:inputType="textPersonName"
        android:text="@string/orientationZ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orientationYPlainText" />

    <EditText
        android:id="@+id/lightPlainText"
        android:layout_width="150sp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/light"
        android:inputType="textPersonName"
        android:text="@string/light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orientationZPlainText" />

    <EditText
        android:id="@+id/humidityPlainText"
        android:layout_width="150sp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/humidity"
        android:inputType="textPersonName"
        android:text="@string/humidity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lightPlainText" />

    <EditText
        android:id="@+id/temperaturePlainText"
        android:layout_width="150sp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/temperature"
        android:inputType="textPersonName"
        android:text="@string/temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidityPlainText" />

    <EditText
        android:id="@+id/orientationYPlainText"
        android:layout_width="150sp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/orientationY"
        android:inputType="textPersonName"
        android:text="@string/orientationY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orientationXPlainText" />

    <EditText
        android:id="@+id/orientationXPlainText"
        android:layout_width="150sp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/orientationX"
        android:inputType="textPersonName"
        android:text="@string/orientationX"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearAcceleratorZplainText" />

    <EditText
        android:id="@+id/linearAcceleratorZplainText"
        android:layout_width="150sp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/linearAcceleratorZ"
        android:inputType="textPersonName"
        android:text="@string/linearAcceleratorZ"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearAcceleratorYplainText" />

    <EditText
        android:id="@+id/linearAcceleratorYplainText"
        android:layout_width="150sp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/linearAcceleratorY"
        android:inputType="textPersonName"
        android:text="@string/linearAcceleratorY"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearAcceleratorXplainText" />

    <EditText
        android:id="@+id/linearAcceleratorXplainText"
        android:layout_width="150sp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/linearAcceleratorX"
        android:inputType="textPersonName"
        android:text="@string/linearAcceleratorX"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/magnetometerZplainText" />

    <EditText
        android:id="@+id/magnetometerXplainText"
        android:layout_width="150sp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/magnetometerX"
        android:inputType="textPersonName"
        android:text="@string/magnetometerX"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/magnetometerYplainText"
        android:layout_width="150sp"
        android:layout_height="23dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/magnetometerY"
        android:inputType="textPersonName"
        android:text="@string/magnetometerY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/magnetometerXplainText" />

    <TextView
        android:id="@+id/orientationYTextView"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="250dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orientationXTextView" />

    <TextView
        android:id="@+id/orientationXTextView"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="250dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearAcceleratorZTextView" />

    <TextView
        android:id="@+id/orientationZTextView"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="248dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orientationYTextView" />

    <TextView
        android:id="@+id/lightTextView"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="248dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orientationZTextView" />

    <TextView
        android:id="@+id/humidityTextView"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="248dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lightTextView" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="250dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidityTextView" />

    <TextView
        android:id="@+id/linearAcceleratorZTextView"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="250dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearAcceleratorYTextView" />

    <TextView
        android:id="@+id/linearAcceleratorYTextView"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="250dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearAcceleratorXTextView" />

    <TextView
        android:id="@+id/linearAcceleratorXTextView"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="250dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/magnetometerZTextView" />

    <TextView
        android:id="@+id/magnetometerZTextView"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="250dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/magnetometerYTextView" />

    <TextView
        android:id="@+id/magnetometerYTextView"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="250dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/magnetometerXTextView" />

    <TextView
        android:id="@+id/magnetometerXTextView"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginLeft="250dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="go2FirstActivity"
        android:text="@string/go2FirstActivityBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>